--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "sass": "^1.57.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
