--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.2.2",
     "debounce": "^1.2.1",
+    "lazysizes": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
@@ -27,6 +28,7 @@
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
