--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "debounce": "^1.2.1",
     "lazysizes": "^5.3.2",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
@@ -28,7 +29,6 @@
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "typescript": "^4.4.2",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
