--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.2.2",
-    "debounce": "^1.2.1",
     "lazysizes": "^5.3.2",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
